# nebula

./: Cargo.toml  README.md
my_project/: cargo.toml
my_project/src/: main.rs  route.rs  server.rs
src/: cli.rs  main.rs  template.rs  types.rs
src/commands/: generate.rs  mod.rs  new.rs
src/generators/: client.rs  web.rs
src/generators/api/: entity.rs  handler.rs  mod.rs
src/generators/server/: entity.rs  handler.rs  migration.rs  mod.rs  resolver.rs  routes.rs
src/templates/: env.toml  gitignore.toml
src/templates/client/: component.toml
src/templates/server/: cargo.toml  entity.toml  handler.toml  main.toml  migration.toml  resolver.toml  route.toml  routes.toml  server.toml
src/utils/: errors.rs  file.rs  mod.rs  prompt.rs  template.rs  tools.rs
