[package]
name = "nebula"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
colored = "3.0.0"
convert_case = "0.7.1"
dialoguer = "0.11.0"
inquire = "0.7.5"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
toml = "0.8.19"
 